2004-01-04  Paul Eggert  <eggert@twinsun.com>

	* lib/autoconf/general.m4 (AC_ARG_PROGRAM):
	Use "rm -f" to remove conftest.sed, not plain "rm".
	Bug reported by David Relson in
	<http://mail.gnu.org/archive/html/autoconf/2004-01/msg00011.html>.

	* Makefile.am (autom4te-update):
	Replace "rm -rf" and "rm -fr" with "rm -f -r", as POSIX requires.
	* Makefile.maint (my-distcheck, do-po-update): Likewise.
	* doc/autoconf.texi (Guidelines): Likewise.
	* lib/autoconf/general.m4 (_AC_INIT_PREPARE): Likewise.
	* lib/autoconf/libs.m4 (_AC_PATH_X_XMKMF): Likewise.
	* lib/autoconf/specific.m4 (AC_SYS_LONG_FILE_NAMES): Likewise.
	* lib/autotest/general.m4 (AT_INIT): Likewise.
	* lib/m4sugar/m4sh.m4 (AS_TMPDIR): Likewise.
	* tests/Makefile.am (clean-local): Likewise.
	* tests/tortue.at (AC_CONFIG_FILES, HEADERS, LINKS and COMMANDS,
	srcdir): Likewise.
	* doc/autoconf.texi (Limitations of Usual Tools):
	Warn against "rm -fr".
	
2004-01-03  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi (Limitations of Usual Tools): Mention that cc
	-c -o might not work.  From a suggestion by Kevin Ryde.
	(C Compiler, Generating Sources, Limitations
	of Usual Tools, Limitations of Make, Making testsuite Scripts):
	Don't put '-o' after non-options, as POSIX doesn't allow this.
	Mention that cc's name might be gcc or c89 or whatever.

2004-01-04  Kevin Ryde  <user42@zip.com.au>

	* doc/autoconf.texi: Add various further index entries.

2003-12-29  Paul Eggert  <eggert@twinsun.com>

	* bin/autoreconf.in (autoreconf_current_directory):
	Fix typo: mkdir without umask arg.

2003-12-27  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/autoconf.texi (Limitations of Make) <Automatic rule rewriting>:
	Documents OSF1/Tru64 make behavior.  Replace `VPATH = ../src' by
	`VPATH = ../pkg/src' in examples to make the OSF1/Tru64 make
	explanation clearer.

2003-12-24  Andreas Schwab  <schwab@suse.de>

	* doc/autoconf.texi (Default Includes): Fix misspelling of
	AC_INCLUDES_DEFAULT.
